# genderalize

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
genderalize/: __init__.py  _gendered_dict.py  _matchers.py  _replace.py  api.py  cli.py  words.json
tests/: test_gender_generalization_matcher.py  test_gender_matcher.py  test_replace_pronouns.py
